GKE-Demo/confluent-platform/basic/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: connect-destination-rule
  namespace: confluent
spec:
  host: connect.confluent.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
        maxRetries: 10
        http1MaxPendingRequests: 1024
        http2MaxRequests: 10240
        maxRequestsPerConnection: 1024               
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: replicator-destination-rule
  namespace: confluent
spec:
  host: replicator.confluent.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
        maxRetries: 10
        http1MaxPendingRequests: 1024
        http2MaxRequests: 10240
        maxRequestsPerConnection: 1024
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: schemaregistry-destination-rule
  namespace: confluent
spec:
  host: schemaregistry.confluent.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
        maxRetries: 10  
        http1MaxPendingRequests: 1024
        http2MaxRequests: 10240
        maxRequestsPerConnection: 1024   
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ksqldb-destination-rule
  namespace: confluent
spec:
  host: ksqldb.confluent.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
        maxRetries: 10
        http1MaxPendingRequests: 1024
        http2MaxRequests: 10240
        maxRequestsPerConnection: 1024
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: controlcenter-destination-rule
  namespace: confluent
spec:
  host: controlcenter.confluent.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
        maxRetries: 10
        http1MaxPendingRequests: 1024
        http2MaxRequests: 10240
        maxRequestsPerConnection: 1024
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: zookeeper-destination-rule
  namespace: confluent
spec:
  host: zookeeper.confluent.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      tcp:
        maxConnections: 10240
        tcpKeepalive:
          interval: 1m
          time: 3m
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kafka-destination-rule
  namespace: confluent
spec:
  host: broker.confluent.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      tcp:
        maxConnections: 10240
        tcpKeepalive:
          interval: 1m
          time: 3m
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kafkarestproxy-destination-rule
  namespace: confluent
spec:
  host: kafkarestproxy.confluent.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
        maxRetries: 10
        http1MaxPendingRequests: 1024
        http2MaxRequests: 10240
        maxRequestsPerConnection: 1024
